--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -4,11 +4,12 @@
   width: 50%;
   padding: 6px 0 0;
   top: 50%;
+  background: var(--CodGray2);
   display: inline-block;
   position: relative;
   transform: translateY(-50%);
   border-radius: 2px;
-  border: 1px solid var(--Gallery);
+  border: 1px solid var(--Trout);
 }
 
 .searchBar i {
@@ -25,9 +26,9 @@
 .searchBar input {
   width: 95%;
   font-size: 1.1rem;
-  font-weight: 500;
+  font-weight: 400;
   padding: 0 8px 8px 33px;
-  color: var(--Trout);
+  color: var(--Silver);
   border: none;
   background-color: transparent;
 }
@@ -37,15 +38,15 @@
 }
 
 .suggestedSearch {
-  background: var(--White);
+  background: var(--CodGray2);
   position: absolute;
   z-index: 99;
   margin-top: 5px;
-  color: var(--Black);
+  color: var(--Silver);
   width: 100%;
   left: 0;
   padding: 11px;
-  box-shadow: 0 2px 2px var(--Silver);
+  box-shadow: 0 2px 2px var(--CodGray2);
 }
 
 .suggestedSearch ul {
@@ -77,12 +78,12 @@
 .searchItem i {
   font-size: 12px;
   text-align: right;
-  color: var(--Astronaut);
+  color: var(--Jade);
   vertical-align: top;
 }
 
 .searchItem:hover {
-  background: var(--Sail);
+  background: var(--Black);
 }
 
 .popProd {
@@ -90,11 +91,11 @@
   font-weight: 800;
   line-height: 1;
   padding: 7px 0;
-  color: var(--Astronaut);
+  color: var(--Jade);
 }
 
 .active {
-  background: var(--Sail);
+  background: var(--Black);
 }
 
 @media (max-width: 1200px) {
