--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -45,4 +45,7 @@
   --Astronaut: #2d4373;
   --Mercury: #e2e2e2;
   --Green: #64b44b;
+  --CodGray: #1a1a1a;
+  --CodGray2: #1e1e1e;
+  --Jade: #00b073;
 }
