--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,8 +5,8 @@
   width: 100%;
   height: 74px;
   padding: 0 4%;
-  background: var(--White, #fff);
-  border-bottom: 1px solid var(--Gallery, #efefef);
+  background: var(--CodGray);
+  border-bottom: 1px solid var(--Trout);
   min-width: 1024px;
   transform: translateZ(0);
   transition: all 0.5s ease-in-out;
@@ -14,6 +14,7 @@
 
 .logoInfo {
   position: relative;
+  color: var(--Jade);
   top: 20px;
   cursor: pointer;
   margin-right: 3%;
@@ -24,7 +25,7 @@
 
 .askQuestion {
   color: #fff;
-  background: var(--Astronaut, #2d4373);
+  background: var(--Jade);
   padding: 5px 15px;
   cursor: pointer;
   border-radius: 5px;
