--- a/src/components/QuickLinks/QuickLinks.css
+++ b/src/components/QuickLinks/QuickLinks.css
@@ -1,8 +1,8 @@
 @import '../variables.css';
 
 .container {
-  background: var(--Trout);
-  color: var(--White);
+  background: var(--CodGray);
+  color: var(--Gallery);
   width: 100%;
   border-radius: 10px;
   margin-right: 10px;
@@ -26,7 +26,7 @@
 .smallList li {
   text-align: left;
   padding: 10px 0;
-  border-bottom: 1px solid var(--Gallery);
+  border-bottom: 1px solid var(--Trout);
 }
 
 .smallList li {
@@ -52,7 +52,7 @@
 .caret {
   position: absolute;
   right: 5px;
-  color: var(--White);
+  color: var(--Gallery);
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
