--- a/src/components/Feedback/components/FeedbackBar/FeedbackBar.component.css
+++ b/src/components/Feedback/components/FeedbackBar/FeedbackBar.component.css
@@ -1,8 +1,7 @@
-@import '../variables.css';
+@import '../../../variables.css';
 
 .root {
-  background: var(--WildSand, #f5f5f5);
-  color: #333;
+  background: var(--CodGray2);
 }
 
 .container {
@@ -14,8 +13,8 @@
 }
 
 .feedbackBtn {
-  background: var(--Flamingo, #ef4e28);
-  color: var(--White, #fff);
+  background: var(--Jade);
+  color: var(--White);
   border: none;
   font-size: 20px;
   font-weight: 400;
@@ -24,16 +23,4 @@
   padding: 5px 10px;
   cursor: pointer;
   width: 80px;
-}
-
-.positiveFeedback {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-  font-size: 20px;
-}
-
-.positiveFeedback i {
-  color: var(--Green);
 }
