--- a/src/components/Layout/components/Page/Page.component.css
+++ b/src/components/Layout/components/Page/Page.component.css
@@ -77,7 +77,7 @@ hr {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid var(--Silver);
+  border-top: 1px solid var(--MineShaft);
   margin: 1em 0;
   padding: 0;
 }
