--- a/src/components/QuickLinks/QuickLinks.css
+++ b/src/components/QuickLinks/QuickLinks.css
@@ -26,7 +26,7 @@
 .smallList li {
   text-align: left;
   padding: 10px 0;
-  border-bottom: 1px solid var(--Trout);
+  border-bottom: 1px solid var(--MineShaft);
 }
 
 .smallList li {
