--- a/src/routes/not-found/NotFound.css
+++ b/src/routes/not-found/NotFound.css
@@ -9,10 +9,10 @@
 .containerLeft {
   margin: 0 auto;
   display: inline-block;
-  width: 74%;
+  width: 75%;
   padding: 0 0 40px;
   min-height: 400px;
-  max-width: var(--max-content-width, 1024px);
+  vertical-align: top;
 }
 
 .containerRight {
