--- a/src/components/QuickLinks/components/SidePanel/SidePanel.component.css
+++ b/src/components/QuickLinks/components/SidePanel/SidePanel.component.css
@@ -1,4 +1,4 @@
-@import '../variables.css';
+@import '../../../variables.css';
 
 .container {
   background: var(--CodGray);
@@ -66,4 +66,19 @@
   margin: 0;
   list-style: none;
   padding: 10px 20px 10px 10px;
+}
+
+.panelItem {
+  display: inline-block;
+  width: 87%;
+}
+
+.activeBets {
+  text-align: center;
+  border-radius: 10px;
+  padding: 1px;
+  font-size: 14px;
+  background: var(--MineShaft);
+  display: inline-block;
+  width: 10%;
 }
