Moving global styles to a separate file

--- a/src/components/Layout/components/Page/Page.component.css
+++ b/src/components/Layout/components/Page/Page.component.css
@@ -1,4 +1,12 @@
 @import '../../../../commonStyles/customFont.css';
+@import '../../../../commonStyles/globalCss';
+
+/**
+ * We must import this in every css file that needs variables because post-css loader
+ * transforms single file at a time. So, if these variables are included only in parent
+ * this loader will throw warnings that variables are not defined, even though these have
+ * been applied on the root scope and will work correctly in HTML
+ */
 @import '../../../variables.css';
 
 /*
@@ -6,191 +14,6 @@
  * If you import external CSS file from your internal CSS
  * then it will be inlined and processed with CSS modules.
  */
-
-/*
- * Base styles
- * ========================================================================== */
-
-html {
-  color: var(--Gallery);
-  font-weight: 400;
-  font-size: 1em; /* ~16px; */
-  font-family: var(--font-family-base);
-  box-sizing: border-box;
-  line-height: 1.375; /* ~22px */
-}
-
-/* Track */
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: var(--Black);
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: var(--CodGray2);
-}
-
-body {
-  margin: 0;
-  width: 100%;
-  background: var(--MineShaft);
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-a {
-  color: var(--Lochmara);
-}
-
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-  background: var(--Sail);
-  text-shadow: none;
-}
-
-::selection {
-  background: var(--Sail);
-  text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid var(--MineShaft);
-  margin: 1em 0;
-  padding: 0;
-}
-
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-  vertical-align: middle;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-  resize: vertical;
-}
-
-/*
- * Browser upgrade prompt
- * ========================================================================== */
-
-:global(.browserupgrade) {
-  margin: 0.2em 0;
-  background: var(--Silver);
-  color: var(--Black);
-  padding: 0.2em 0;
-}
-
-/*
- * Print styles
- * Inlined to avoid the additional HTTP request:
- * http://www.phpied.com/delay-loading-your-print-css/
- * ========================================================================== */
-
-@media print {
-  *,
-  *::before,
-  *::after {
-    background: transparent !important;
-    color: var(--Black) !important; /* Black prints faster: http://www.sanbeiji.com/archives/953 */
-    box-shadow: none !important;
-    text-shadow: none !important;
-  }
-
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
-
-  a[href]::after {
-    content: ' (' attr(href) ')';
-  }
-
-  abbr[title]::after {
-    content: ' (' attr(title) ')';
-  }
-
-  /*
-   * Don't show links that are fragment identifiers,
-   * or use the `javascript:` pseudo protocol
-   */
-
-  a[href^='#']::after,
-  a[href^='javascript:']::after {
-    content: '';
-  }
-
-  pre,
-  blockquote {
-    border: 1px solid var(--DustyGray);
-    page-break-inside: avoid;
-  }
-
-  /*
-   * Printing Tables:
-   * http://css-discuss.incutio.com/wiki/Printing_Tables
-   */
-
-  thead {
-    display: table-header-group;
-  }
-
-  tr,
-  img {
-    page-break-inside: avoid;
-  }
-
-  img {
-    max-width: 100% !important;
-  }
-
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
-
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
-}
 
 .pageContainer {
   min-width: 1024px;
